--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,9 +2,16 @@
 
 <!--start top bar nav-->
 
+
 <!DOCTYPE html>
 <html>
 <body>
+
+<div class="title">
+
+<a href="#"><%= link_to "Huon d'Auvergne", root_path() %><br/><%= link_to "Digital Archive", root_path() %></a>
+
+</div>
 
 <div id="nav">
 <ul>
@@ -35,6 +42,10 @@
   </li>
 
 </ul>
+</div>
+
+<div class="deco-strip">
+
 </div>
 
 
