--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -56,13 +56,13 @@
                 <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Washington and Lee University)
               </div>
 
-            <h5 id="sub-header">Washington and Lee Student Researchers</h4>
+            <!-- <h5 id="sub-header">Washington and Lee Student Researchers</h4>
 
               <div class="participant_section">Natsumi Alvarez (Summer 2015) - TEI encoding and development<br>
                 Dashiel Derricks (Fall 2015 - Winter 2016) - TEI encoding and development; Versioning Machine<br>
                 Sarah Schaffer (Winter 2016) - Annotation prototyping<br>
                 Abdurrafey Khan (Fall 2016 - Spring 2017) - Versioning Machine<br>
-              </div>
+              </div> -->
 
          <hr>
 
