--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,7 +9,7 @@
 
 <div class="title">
 
-<a href="#"><%= link_to "Huon d'Auvergne", root_path() %><br/><%= link_to "Digital Archive", root_path() %></a>
+Huon d'Auvergne <br> Digital Archive
 
 </div>
 
@@ -40,6 +40,8 @@
         <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
     </div>
   </li>
+
+  <li><%= link_to 'Home', root_path() %>
 
 </ul>
 </div>
