--- a/app/assets/stylesheets/vmachine_styles.css
+++ b/app/assets/stylesheets/vmachine_styles.css
@@ -540,9 +540,9 @@ sub {
  * Remove border when inside `a` element in IE 8/9/10.
  */
 
-img {
+/*img {
   border: 0;
-}
+}*/
 
 /**
  * Correct overflow not hidden in IE 9/10/11.
@@ -849,13 +849,6 @@ body {
 a:hover {
   cursor: pointer; }
 
-img {
-  max-width: 100%;
-  height: auto; }
-
-img {
-  -ms-interpolation-mode: bicubic; }
-
 #map_canvas img,
 #map_canvas embed,
 #map_canvas object,
@@ -886,9 +879,9 @@ img {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-img {
+/*img {
   display: inline-block;
-  vertical-align: middle; }
+  vertical-align: middle; }*/
 
 textarea {
   height: auto;
