--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -63,18 +63,18 @@
     <div class="row">
         <div class="col-6">
             <p class="ms-image"><%= image_tag('t-120v.jpg', id: 'ms-image', alt: 'Manuscript image') %></p>
-            <p class="ms-caption">Turin, N III 19, fol. 120v.<lb>Rajna: "Ug e gli uccelli."</p>
+            <p class="ms-caption">Turin, N III 19, fol. 120v.<lb> Rajna: <em>Ug. e gli uccelli.</em></p>
         </div>
 
 <!-- Table of Contents Cell -->
         <div class="col-6">
             <div class="ms-toc">
-            <head class="ms-toc">
-            <ol>
+            <p class="ms-toc">Table of Contents</p>
+            <ol class="ms-toc">
                 <li>Introduction</li>
                 <li>Editorial Criteria</li>
-                <li><%= link_to('III. Encoding Criteria', url_for(params.merge(:t_praxis => true))) %></li>
-                <li><%= link_to('IV. Digital Edition', url_for(params.merge(:edition => true))) %></li>
+                <li><%= link_to('Encoding Criteria', url_for(params.merge(:t_praxis => true))) %></li>
+                <li><%= link_to('Digital Edition', url_for(params.merge(:edition => true))) %></li>
                 <li>Digital Facsimile</li>
                 <li>Concordance</li>
                 <li>Codicology</li>
@@ -82,7 +82,7 @@
                 </head>
             </ol>
 
-
+<!--
                 <p class="ms-intro-h3">Table of Contents</p>
                 <p class="ms-toc">I. Introduction</p>
                 <p class="ms-toc">II. Editorial Criteria</p>
@@ -94,5 +94,7 @@
             </div>
         </div>
     </div>
+
+-->
 
 
