--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-6">
             <p class="ms-resp">Edition prepared by <%= @editor %></p>
-            <p class="ms-resp">TEI encoding by <%= @encoder %></p>
+            <p class="ms-resp">TEI encoding by <%= @encoder %> and Leslie Zarker Morgan</p>
         </div>
         <div class="col-6">
         </div>
@@ -78,23 +78,13 @@
                 <li>Digital Facsimile</li>
                 <li>Concordance</li>
                 <li>Codicology</li>
+                <li>Glossary</li>
                 </ol>
                 </head>
             </ol>
 
-<!--
-                <p class="ms-intro-h3">Table of Contents</p>
-                <p class="ms-toc">I. Introduction</p>
-                <p class="ms-toc">II. Editorial Criteria</p>
-                <p class="ms-toc"><%= link_to('III. Encoding Criteria', url_for(params.merge(:t_praxis => true))) %></p>
-                <p class="ms-toc"><%= link_to('IV. Digital Edition', url_for(params.merge(:edition => true))) %></p>
-                <p class="ms-toc">V. Digital Facsimile</p>
-                <p class="ms-toc">VI. Concordance</p>
-                <p class="ms-toc">VII. Codicology</p>
-            </div>
-        </div>
-    </div>
 
--->
+
+
 
 
