--- a/app/assets/stylesheets/vmachine_styles.css
+++ b/app/assets/stylesheets/vmachine_styles.css
@@ -7216,12 +7216,12 @@ p.tagline {
   width: 100%;
 }
 
-.footer img{
-/*  max-height: 50px;
-*/  margin-right: 15px;
+/*.footer img{
+  max-height: 50px;
+  margin-right: 15px;
   margin-top: 15px;
   max-width: 183px;
-}
+}*/
 
 #hidden-title{
   font-size: 28px;
