--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,29 +1,84 @@
+
+
 <div class="container">
 
-	<div class="col-8">
-		<div class="row">
+	<div class="row">
+		<div class="col-4"
+			
+			<%= link_to( image_tag('dh_at_wandl.png', :id => "wludh_logo"), "https://digitalhumanities.wlu.edu/") %>
+
+			<br>
+
+			<%= link_to( image_tag('neh_logo.png', :id => "neh_logo"), "https://www.neh.gov/") %>
+			
+		</div>
+
+		<div class="col-4"
+			
+			<%= link_to( image_tag('loyola_logo.svg', :id => "loyola_logo"), "https://www.loyola.edu/") %>
+
+			<br>
+
+			<%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
+			
+		</div>
+
+		<div class="col-4"
+			
+			<%= link_to( image_tag('marucelliana_logo.png', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
+			
+		</div>
+	</div>
+
+</div>
+
+<!--
+
+<div class="footer">
+
+	<div class="img-box-1">
+		<div><%= link_to( image_tag('dh_at_wandl.png', :id => "wludh_logo"), "https://digitalhumanities.wlu.edu/") %></div>
+		
+		<div><%= link_to( image_tag('neh_logo.png', :id => "neh_logo"), "https://www.neh.gov/") %></div>
+	</div>
+	<div class="img-box-2">
+		<div><%= link_to( image_tag('loyola_logo.svg', :id => "loyola_logo"), "https://www.loyola.edu/") %></div>
+		
+		<div><%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/") %></div>
+	</div>
+	<div class="img-box-3">
+		<%= link_to( image_tag('marucelliana_logo.png', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
+	</div>
+
+</div>
+
+-->
+
+
+<!--
+
+<div class="container">
+
 			<div class="col-4">
 				<%= link_to( image_tag('dh_at_wandl.png'), "https://digitalhumanities.wlu.edu/") %>
-			</div>
-			<div class="col-4">
 				<%= link_to( image_tag('neh_logo.png'), "https://www.neh.gov/") %>
 			</div>
-		</div>
-		<div class="row">
+		
 			<div class="col-4">
 				<%= link_to( image_tag('loyola_logo.svg'), "https://www.loyola.edu/") %>
-			</div>
-			<div class="col-4">
 				<%= link_to( image_tag('unf_logo.svg', :id => "unf_logo"), "https://www.unf.edu/") %>
 			</div>
-		</div>
-	</div>
-	<div class="col-4">
-		<div class="row">
-			<%= link_to( image_tag('marucelliana_logo.png'), "http://www.maru.firenze.sbn.it/") %>
-		</div>
-	</div>
+
+			<div class="col-4">
+				<%= link_to( image_tag('marucelliana_logo.png'), "http://www.maru.firenze.sbn.it/") %>
+			</div>	
+		
 </div>
+
+-->
+
+
+
 
 
 <!--
