responsive title and nav bar

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,54 +3,156 @@
 <!--start top bar nav-->
 
 
+<!-- <!DOCTYPE html>
+
+<html>
+
+<body>
+
+
+
+  <div class="title">
+
+    <div class="row-title">
+
+        <div class="col-12">
+
+            Huon d'Auvergne Digital Archive
+
+        </div>
+
+    </div>
+
+  </div>
+
+
+    <div class="nav">
+
+    <ul>
+    <div class="row-nav">
+
+        <div class="col-8"></div>
+
+        <div class="col-1">          
+              <li><%= link_to 'Bibliography', bibliography_path() %></li>
+        </div>
+
+        <div class="col-1">
+              <li class="dropdown">
+                <%= link_to 'Praxis', intro_praxis_path() %>
+                <div class="dropdown-content">
+                  <a href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
+                  <a href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
+                  <a href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
+                  <a href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
+                  <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+                </div>
+              </li>
+        </div>
+
+        <div class="col-1">
+                <li class="dropdown">
+                <%= link_to 'Editions', editions_path() %>
+                  <div class="dropdown-content">
+                    <a href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
+                    <a href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
+                    <a href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
+                    <a href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
+                    <a href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
+                    <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+                  </div>
+              </li>
+        </div>
+
+        <div class="col-1">
+              <li><%= link_to 'Home', root_path() %></li>
+        </div>
+
+    </div>
+
+    </ul>
+
+    </div>
+
+</body>
+
+</html> -->
+
 <!DOCTYPE html>
 <html>
 <body>
 
+<!-- Title Bar -->
+
+
 <div class="title">
 
-Huon d'Auvergne Digital Archive
+      <div class="row">
 
+            <div class="col-12">
+
+           <div class="title">Huon d'Auvergne Digital Archive</div>
+
+            </div>
+
+      </div>
+      
 </div>
+
+
+
+<!-- Navigation Bar -->
 
 <div id="nav">
-<ul>
 
-  <li><%= link_to 'Bibliography', bibliography_path() %></li>
+      <ul>
 
-  <li class="dropdown">
-    <%= link_to 'Praxis', intro_praxis_path() %>
-    <div class="dropdown-content">
-      <a href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
-      <a href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
-      <a href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
-      <a href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
-      <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
-    </div>
-  </li>
+            <div class="row">
 
-    <li class="dropdown">
-    <%= link_to 'Editions', editions_path() %>
-      <div class="dropdown-content">
-        <a href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
-        <a href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
-        <a href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
-        <a href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
-        <a href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
-        <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
-    </div>
-  </li>
+                  <div class="col-8"></div>
 
-  <li><%= link_to 'Home', root_path() %>
+                  <div class="col-1">          
+                            <li><%= link_to 'Bibliography', bibliography_path() %></li>
+                  </div>
 
-</ul>
+                  <div class="col-1">
+                            <li class="dropdown">
+                              <%= link_to 'Praxis', intro_praxis_path() %>
+                              <div class="dropdown-content">
+                                <a href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
+                                <a href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
+                                <a href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
+                                <a href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
+                                <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+                              </div>
+                            </li>
+                  </div>
+
+                  <div class="col-1">
+                              <li class="dropdown">
+                              <%= link_to 'Editions', editions_path() %>
+                                <div class="dropdown-content">
+                                  <a href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
+                                  <a href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
+                                  <a href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
+                                  <a href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
+                                  <a href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
+                                  <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+                              </div>
+                            </li>
+                  </div>
+
+                  <div class="col-1">
+                            <li><%= link_to 'Home', root_path() %></li>
+                  </div>
+
+            </div>
+
+      </ul>
+
 </div>
 
-<div class="deco-strip">
-
-</div>
 
 
 </body>
 </html>
-  <!--end top bar nav-->
