--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -307,7 +307,7 @@ header{
   margin-bottom: 0.5rem; }
 
 
-/*Top bar*/
+/* Top bar */
 
 #nav {
 
@@ -326,6 +326,10 @@ header{
     width: auto;
     background-color: black;
     line-height: 2.5;
+    border-bottom: #5f0000;
+    border-top: transparent;
+    border-style: solid;
+    border-bottom-width: .5em;
 }
 
 #nav li {
@@ -374,23 +378,15 @@ header{
     display: block;
 }
 
-.deco-strip {
-    height: 10px;
-    background: #5f0000;
-    margin-top: 0%;
-    z-index: -1;
-    width: auto;
-}
-
 .title {
     color: whitesmoke;
     line-height: 103%;
-    font-size: 4em;
+    font-size: 140%;
     padding-top: 2%;
     padding-left: 2%;
     background: black;
     font-weight: lighter;
-    height: 150px;
+    height: 35%;
   }
 
 /*Content */
@@ -644,21 +640,21 @@ table {
   border:none;
 }
 
-table, tr, th{
+table, tr, th {
   padding:none;
 }
 
-#tei-hr{
+#tei-hr {
   width:40%;
   text-align:center; margin: 0 auto;
 }
 
-#comparison-hr{
+#comparison-hr {
   width:66.7%;
   text-align:center; margin: 0 auto;
 }
 
-.witnessMenu{
+.witnessMenu {
   width: 69%;
 }
 
