--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,14 +2,14 @@
 <html>
 <body>
 
-<!-- Title Bar -->
+<!-- Title Bar 
 
 
 <div class="title">
 
       <div class="row">
 
-            <div class="col-12">
+          <div class="col-12">
 
            <div class="title">Huon d'Auvergne Digital Archive</div>
 
@@ -18,6 +18,8 @@
       </div>
       
 </div>
+
+-->
 
 
 <!-- Navigation Bar -->
@@ -28,7 +30,11 @@
 
             <div class="row">
 
-                  <div class="col-8"></div>
+                  <div class="col-8">
+                    
+                    <div class="title">Huon d'Auvergne Digital Archive</div>
+
+                  </div>
 
                   <div class="col-1">
                             <li><%= link_to 'Home', root_path() %></li>
