--- a/app/assets/stylesheets/vmachine_styles.css
+++ b/app/assets/stylesheets/vmachine_styles.css
@@ -4513,7 +4513,7 @@ dl {
   list-style-position: outside;
   font-family: inherit; }
 
-ul {
+/*ul {
   margin-left: 1.1rem; }
   ul.no-bullet {
     margin-left: 0; }
@@ -4521,7 +4521,7 @@ ul {
     ul.no-bullet li ol {
       margin-left: 1.25rem;
       margin-bottom: 0;
-      list-style: none; }
+      list-style: none; }*/
 
 /* Unordered Lists */
 ul li ul,
