--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
 
 	<div class="row">
-		<div class="col-4"
+		<div class="col-4">
 			
 			<%= link_to( image_tag('dh_at_wandl.png', :id => "wludh_logo"), "https://digitalhumanities.wlu.edu/") %>
 
@@ -13,7 +13,7 @@
 			
 		</div>
 
-		<div class="col-4"
+		<div class="col-4">
 			
 			<%= link_to( image_tag('loyola_logo.svg', :id => "loyola_logo"), "https://www.loyola.edu/") %>
 
@@ -23,7 +23,7 @@
 			
 		</div>
 
-		<div class="col-4"
+		<div class="col-4">
 			
 			<%= link_to( image_tag('marucelliana_logo.png', :id => "marucelliana_logo"), "http://www.maru.firenze.sbn.it/") %>
 			
