--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,92 @@
-<!DOCTYPE html>
+<div>
+
+      <ul>
+        <li class="title"><%= link_to "Huon d'Auvergne: A Digital Edition", root_path() %></li>
+        <li><%= link_to 'Bibliography', bibliography_path() %></li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Editions</a>
+          <div class="dropdown-content">
+            <a href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
+            <a href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
+            <a href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
+            <a href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
+            <a href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
+            <a href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Praxis</a>
+          <div class="dropdown-content">
+            <a href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
+            <a href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
+            <a href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
+            <a href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
+            <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+          </div>
+        </li>
+        <li><a href="#">About</a></li>
+      </ul>
+
+</div>
+
+<!-- <div>
+      <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+          <li class="name"></li>
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Huon d'Auvergne</span></a></li>
+        </ul>
+        <section class="top-bar-section">
+          <ul>
+            <li class=""> <%= link_to "Huon d'Auvergne: A Digital Edition", root_path() %>
+            -->
+            <!-- <a href="/index.html">Huon d'Auvergne: A Digital Edition</a> -->
+            <!--
+            </li>
+          </ul>
+        </section>
+        <section class="top-bar-section">
+          <ul class="right">
+            <li class="">
+              <%= link_to 'Bibliography', bibliography_path() %>
+            </li>
+          </ul>
+        </section>
+        <section class="top-bar-section">
+          <ul class="right">
+            <li><%= link_to 'Editions', editions_path() %>
+              <ul data-options="mobile_show_parent_link: true">
+                <li> <%= link_to 'Berlin (B)', b_manuscript_path() %></li>
+                <li> <%= link_to 'Turin (T)', t_manuscript_path() %></li>
+                <li> <%= link_to 'Padua (P)', p_manuscript_path() %></li>
+                <li> <%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></li>
+                <li> <%= link_to 'Berlin Translation', b_translation_path() %></li>
+                <li> <%= link_to 'Hell Scene Comparison', hell_scene_path() %></li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <section class="top-bar-section">
+          <ul class="right">
+            <li><%= link_to 'Praxis', intro_praxis_path() %>
+              <ul data-options="mobile_show_parent_link: true">
+                <li><%= link_to 'B Criteria', b_praxis_path() %></li>
+                <li><%= link_to 'T Criteria', t_praxis_path() %></li>
+                <li><%= link_to 'P Criteria', p_praxis_path() %></li>
+                <li><%= link_to 'Br Criteria', br_praxis_path() %></li>
+                <li><%= link_to 'Encoding Guidelines', encod_praxis_path() %></li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+      </nav>
+    </div> -->
+  <!--end top bar nav-->
+
+
+
+<!-- <!DOCTYPE html>
 <html>
-<body>
+<body> -->
 
 <!-- Title Bar 
 
@@ -24,23 +110,24 @@
 
 <!-- Navigation Bar -->
 
+<!--
+
 <div id="nav">
 
-      <ul>
+                  <div class="row">
 
-            <div class="row">
-
-                  <div class="col-8">
+                  <div class="col-6">
                     
                     <div class="title">Huon d'Auvergne Digital Archive</div>
 
                   </div>
 
-                  <div class="col-1">
-                            <li><%= link_to 'Home', root_path() %></li>
-                  </div>
+                <ul>
 
-                  <div class="col-1">
+                  <div class="col-6">
+
+                            <li><%= link_to 'Home', root_path() %></li>
+                  
                               <li class="dropdown">
                               <%= link_to 'Editions', editions_path() %>
                                 <div class="dropdown-content">
@@ -52,9 +139,7 @@
                                   <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
                               </div>
                             </li>
-                  </div>
-
-                  <div class="col-1">
+                  
                             <li class="dropdown">
                               <%= link_to 'Praxis', intro_praxis_path() %>
                               <div class="dropdown-content">
@@ -65,18 +150,17 @@
                                 <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
                               </div>
                             </li>
-                  </div>
-
-                   <div class="col-1">          
+                           
                             <li><%= link_to 'Bibliography', bibliography_path() %></li>
                   </div>
 
-            </div>
+                </ul>
 
-      </ul>
+            </div>
 
 </div>
 
 
 </body>
 </html>
+-->
