--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,14 +3,20 @@
 
 <div class="row">
 
-  <div class="col-2">
-
-  </div>
+  <div class="col-2"></div>
 
   <div class="col-10">
 
   <p class="intro"><img class="initial"<%= image_tag("initial-home-page.png", alt: "Initial L") %></img>inking institutions and disciplines, the Huon d'Auvergne Digital Archive is a collaborative scholarly project that presents for the first time to a modern reading audience the Franco-Italian Huon d'Auvergne romance epic. The first phase of the project (January 1, 2014 - August 31, 2017), funded by the generosity of the National Endowment for the Humanities, develops the first version of the Huon digital archive, which includes diplomatic editions of all four extant manuscripts, an accompanying English translation, and a reading interface that demonstrates protocols for textual analysis and comparison of variants. From the initial foundation of phase one, the Huon editorial team will build additional functionality involving high-resolution scans of the four Franco-Italian manuscripts, creating an interactive and linked reading environment. It is our hope that the results of phase one will already be useful to researchers, teachers, and students of medieval epic. A technical report of the project can be found on our <a href="https://github.com/wludh/huon_rails/blob/master/tech-report.md">GitHub repository</a>.</p>
-          <hr>
+          
+  <hr>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-2"></div>
+
+  <div class="col-10">
           <h4 id="sub-header">Critical Editions</h4>
           <div id="manuscript_list_index">
             <%= link_to 'Berlin (B)', b_manuscript_path() %> |
@@ -20,7 +26,14 @@
             <%= link_to 'Berlin Translation', b_translation_path() %> |
             <%= link_to 'Hell Scene Comparison', hell_scene_path() %> 
           </div>
-          <hr>
+  <hr>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-2"></div>
+  
+  <div class="col-10">
           <h4 id="sub-header">Huon d'Auvergne Project Team</h4>
           <div id="editorial_staff">
 
@@ -52,8 +65,10 @@
 
               <div class="participant_section">
                 <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Washington and Lee University)<br>
+                <a href="http://library.wlu.edu/about/library-directory/jason-mickel">Jason Mickel</a> (Washington and Lee University)<br>
                 <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
-                <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Washington and Lee University)
+                <a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh"</a> (Scholars' Lab, University of Virginia)<br>
+                <a href="">Abdurrafey Khan</a> (Loyola University Chicago)
               </div>
 
             <!-- <h5 id="sub-header">Washington and Lee Student Researchers</h4>
@@ -63,11 +78,9 @@
                 Sarah Schaffer (Winter 2016) - Annotation prototyping<br>
                 Abdurrafey Khan (Fall 2016 - Spring 2017) - Versioning Machine<br>
               </div> -->
-
-         <hr>
-
-
-</div>
+          <hr>
+          </div>
+    </div>
 
 </div>
 
