--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -183,7 +183,6 @@
 
 /* Homepage and HTML shell style */
 
-
 body {
 	background: rgba(255,255,255,0.9);
 	color: #222;
@@ -262,9 +261,9 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.4; }
 
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
-		font-size: 60%;
-		color: #6f6f6f;
-		line-height: 0; }
+	font-size: 60%;
+	color: #6f6f6f;
+	line-height: 0; }
 
 h1 {
 	font-size: 2.125rem; }
@@ -284,19 +283,19 @@ h5 {
 h6 {
 	font-size: 1rem; }
 
-header{
+header {
 	padding-top:3em;
 	padding-bottom: 4em;
 	margin-bottom: 1.5em;
 }
 
-#sub-header{
+#sub-header {
 	text-align: center;
 	font-weight: bold;
 	margin-bottom: 10px;
 }
 
-#editorial_staff{
+#editorial_staff {
 }
 
 .subheader {
@@ -309,6 +308,7 @@ header{
 
 /* Top bar */
 
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -316,12 +316,16 @@ ul {
     overflow: hidden;
     background-color: #000000;
     border-bottom: #5f0000;
-		border-style: solid;
-		border-bottom-width: .5em;
+	border-style: solid;
+	border-bottom-width: .5em;
 }
 
 li {
     float: right;
+}
+
+li.ms-toc {
+    float: left;
 }
 
 li a, .dropbtn {
