--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -70,14 +70,14 @@
             <p class="ms-toc">Table of Contents</p>
             <hr>
             <ol class="ms-toc">
-                <li>Introduction</li>
-                <li>Editorial Criteria</li>
-                <li><%= link_to('Encoding Criteria', url_for(params.merge(:t_praxis => true))) %></li>
-                <li><%= link_to('Digital Edition', url_for(params.merge(:edition => true))) %></li>
-                <li>Digital Facsimile</li>
-                <li>Concordance</li>
-                <li>Codicology</li>
-                <li>Glossary</li>
+                <li class="ms-toc">Introduction</li>
+                <li class="ms-toc">Editorial Criteria</li>
+                <li class="ms-toc"><%= link_to('Encoding Criteria', url_for(params.merge(:t_praxis => true))) %></li>
+                <li class="ms-toc"><%= link_to('Digital Edition', url_for(params.merge(:edition => true))) %></li>
+                <li class="ms-toc">Digital Facsimile</li>
+                <li class="ms-toc">Concordance</li>
+                <li class="ms-toc">Codicology</li>
+                <li class="ms-toc">Glossary</li>
                 </ol>
                 </head>
             </ol>
