fix links on ms intro page and in nav bar; assign nav class to links

--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -78,9 +78,9 @@
                 <li class="ms-toc">Concordance</li>
                 <li class="ms-toc">Codicology</li>
                 <li class="ms-toc">Glossary</li>
-                </ol>
-                </head>
             </ol>
+            </div>
+            </div>
 
 
 
