--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -324,19 +324,31 @@ li {
     float: right;
 }
 
-li.ms-toc {
-    float: left;
-}
-
-li a, .dropbtn {
-    display: inline-block;
+li.nav {
+	display: inline-block;
     color: whitesmoke;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
+li.title {
+	float: left;
+	color: whitesmoke;
+}
+
+li a.nav, .dropbtn {
+    display: inline-block;
+    color: whitesmoke;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-variant: small-caps;
+    letter-spacing: 0.1em;
+    font-size: 120%;	
+}
+
+li a.nav:hover, .dropdown:hover .dropbtn {
     background-color: #5f0000;
 }
 
@@ -370,88 +382,6 @@ li.dropdown {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-/*
-#nav {
-		list-style: none;
-		font-weight: lighter;
-		width: auto;
-		text-align: center;
-		background-color: #000000;
-		height: 50px;
-		}
-
-#nav ul {
-		list-style-type: none;
-		margin: 0px;
-		padding: 0;
-		width: auto;
-		background-color: black;
-		line-height: 2.5;
-		border-bottom: #5f0000;
-		border-top: transparent;
-		border-style: solid;
-		border-bottom-width: .5em;
-}
-
-#nav li {
-		float: right;
-		font-variant: small-caps;
-}
-
-#nav li a, .dropbtn {
-		color: white;
-		text-align: center;
-		padding: 0em 3em;
-		text-decoration: none;
-		width: auto;
-		font-size: 1.25em;
-		font-weight: bolder;
-}
-
-#title a {
-	color: white;
-}
-
-#nav .dropdown-content {
-		display: none;
-		position: absolute;
-		background-color: #f9f9f9;
-		min-width: 160px;
-		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-		z-index: 1;
-}
-
-#nav li a:hover, .dropdown:hover {
-		background-color: gray;
-}
-
-#nav .dropdown-content a {
-		color: black;
-		padding: 12px 16px;
-		text-decoration: none;
-		display: block;
-		text-align: left;
-}
-
-#nav .dropdown-content a:hover {background-color: #f1f1f1}
-
-#nav .dropdown:hover .dropdown-content {
-		display: block;
-}
-
-.title {
-		color: whitesmoke;
-		line-height: 103%;
-		font-size: 250%;
-		padding-top: 1%;
-		background: black;
-		font-weight: lighter;
-		font-variant: small-caps;
-		text-align: left;
-	}
-
-	*/
 
 /*Content */
 
@@ -525,20 +455,6 @@ p.tagline {
 
 
 /* Footer Main Page */
-
-/*.footer{
-	color:#cccccc !important;
-	width:100%;
-	text-align: center;
-	font-weight:normal;
-	font-size:16px;
-	margin: 0px;
-	margin-bottom: 0px;
-	padding-bottom: 15px;
-	padding-top: 0px;
-	position: absolute;
-	border-top: none;
-}*/
 
 img#wludh_logo {
 	float: left;
@@ -929,17 +845,28 @@ td {
 
 /* MS Introduction Page */
 
+
+.ms-toc {
+	padding-left: 2em;
+	font-variant: small-caps;
+}
+
 .row-intro-image {
 	border: black;
 	border-width: 1px;
 }
 
+li.ms-toc {
+	color: grey;
+    float: left;
+}
+
 p.ms-intro-h1 {
-		color: #5f0000;
-		font-weight: bolder;
-		font-size: .75em;
-		margin-top: 1.5em;
-		margin-bottom: 0em;
+	color: #5f0000;
+	font-weight: bolder;
+	font-size: .75em;
+	margin-top: 1.5em;
+	margin-bottom: 0em;
 }
 
 p.ms-intro-h2 {
@@ -975,11 +902,6 @@ p.ms-toc {
 		font-size: 1.75em;
 		padding-left: 2.5em;
 		padding-top: 1em;
-}
-
-.ms-toc {
-		padding-left: 2em;
-		font-variant: small-caps;
 }
 
 ol.ms-toc {
