--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,30 +1,30 @@
 <div>
 
       <ul>
-        <li class="title"><%= link_to "Huon d'Auvergne: A Digital Edition", root_path() %></li>
-        <li><%= link_to 'Bibliography', bibliography_path() %></li>
+        <li class="title"><%= link_to "Huon d'Auvergne: A Digital Edition", root_path(), class: "nav" %></li>
+        <li><%= link_to 'Bibliography', bibliography_path(), class: "nav" %></a></li>
         <li class="dropdown">
-          <a href="javascript:void(0)" class="dropbtn">Editions</a>
+          <a class="nav" href="javascript:void(0)" class="dropbtn">Editions</a>
           <div class="dropdown-content">
-            <a href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
-            <a href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
-            <a href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
-            <a href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
-            <a href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
-            <a href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a>
           </div>
         </li>
         <li class="dropdown">
-          <a href="javascript:void(0)" class="dropbtn">Praxis</a>
+          <a class="nav" href="javascript:void(0)" class="dropbtn">Praxis</a>
           <div class="dropdown-content">
-            <a href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
-            <a href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
-            <a href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
-            <a href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
-            <a href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+            <a class="nav" href="#"><%= link_to 'B Criteria', b_praxis_path() %></a>
+            <a class="nav" href="#"><%= link_to 'T Criteria', t_praxis_path() %></a>
+            <a class="nav" href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a>
+            <a class="nav" href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
           </div>
         </li>
-        <li><a href="#">About</a></li>
+        <li><a class="nav" href="#">About</a></li>
       </ul>
 
 </div>
